Minor File Renaming and first Week 1 Branch commit

--- a/public_html/frontPage.html
+++ b/public_html/frontPage.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <!-- Style Sheet LINK -->
-        <link rel="stylesheet" type="text/css" href="css/FrontPageCss.css">
+        <link rel="stylesheet" type="text/css" href="css/frontPage.css">
         
         <title>Shopstuff Web Portal</title>
         <meta charset="UTF-8">
