Got Bare basic CSS look and feel down

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
         <title>Shopstuff Web Portal</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- Bootstrap core and CSS Links -->
         <link href="css/bootstrap.min.css" rel="stylesheet"/>
         <link href="css/main.css" rel="stylesheet"/>
 
     </head>
     <body>
         <nav class="navbar navbar-default navbar-fixed-top">
-            <h1> Shopstuff Inc: <small> You want stuff? We have stuff!</small></h1>
+            <h1> Shopstuff Inc </h1>
 
             <ul class="nav navbar-nav">
                 <li><a href="#">Home</a></li>
@@ -32,13 +29,18 @@ and open the template in the editor.
             </ul>
         </nav>
 
-        <p> Content</p>
+        <div class="body-contnet">
+            <p>Body Content Goes Here!</p>
+        </div>
 
         <footer class="footer">
             <div class="container">
-                <p class="text-muted">Place sticky footer content here.</p>
+                <p class="text-muted">&copy; Brandon M. Dopp 2018</p>
             </div>
         </footer>
+
+        <!-- Bootstrap core JavaScript -->
+        <!-- Should Stay At Bottom and In Body Tag -->
         <script src  ="js/jquery.min.js"></script> 
         <script src  ="js/bootstrap.min.js"></script>
     </body>
