Added Products and Shpping Card Pages Linked Navigation to pages Prelimary Product List Css

--- a/public_html/shopping-cart.html
+++ b/public_html/shopping-cart.html
@@ -2,13 +2,11 @@
 <html>
     <head>
         <title>Shopstuff Web Portal</title>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Bootstrap core and CSS Links -->
-        <link href="css/bootstrap.css" rel="stylesheet"/>
         <link href="css/bootstrap.min.css" rel="stylesheet"/>
-        <link href="css/bootstrap-theme.min.css" rel="stylesheet"/>
         <link href="css/main.css" rel="stylesheet"/>
 
     </head>
@@ -17,22 +15,22 @@
             <h1> Shopstuff Inc </h1>
 
             <ul class="nav navbar-nav">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
-                <li><a href="shopping-cart.html">Shopping Cart</a></li>
+                <li><a href="#">Shopping Cart</a></li>
                 <li>
                     <form class="navbar-form navbar-right" role="search">
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Search">
-                            <button type="button" class="btn btn-default">Search</button>
                         </div>
+                        <button type="button" class="btn btn-default">Search</button>
                     </form>
                 </li>
             </ul>
         </nav>
 
         <div class="body-contnet">
- 
+            <p>Body Content Goes Here!</p>
         </div>
 
         <footer class="footer">
