--- a/public_html/products.html
+++ b/public_html/products.html
@@ -31,7 +31,7 @@
 
         <div class="body-contnet">
             <div class="media">
-                <a href="#" class="list-group-item">
+                <a href="product-description.html" class="list-group-item">
                     <div class="media-left media-middle">
                         <img class="media-object" src="images/unknownItem.png" height="125" width="125" alt="Image Picture">
                     </div>
@@ -42,7 +42,7 @@
                 </a>
             </div>
             <div class="media">
-                <a href="#" class="list-group-item">
+                <a href="product-description.html" class="list-group-item">
                     <div class="media-left media-middle">
                         <img class="media-object" src="images/unknownItem.png" height="125" width="125" alt="Image Picture">
                     </div>
@@ -53,18 +53,39 @@
                 </a>
             </div>
             <div class="media">
-                <a href="#" class="list-group-item">
+                <a href="product-description.html" class="list-group-item">
                     <div class="media-left media-middle">
                         <img class="media-object" src="images/unknownItem.png" height="125" width="125" alt="Image Picture">
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading">Item heading</h4>
-                        Price: amount In Stock: no
+                        <p>Price: amount In Stock: no</p>
                     </div>
                 </a>
             </div>
+
+            <nav aria-label="Page navigation">
+                <ul class="pagination">
+                    <li>
+                        <a href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#">5</a></li>
+                    <li>
+                        <a href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            
         </div>
-      
+
         <footer class="footer">
             <div class="footer_contents">
                 <p class="text-muted">&copy; Brandon M. Dopp 2018</p>
