Created index/home Content More Css Tinkering

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,6 +10,7 @@
         <link href="css/bootstrap.min.css" rel="stylesheet"/>
         <link href="css/bootstrap-theme.min.css" rel="stylesheet"/>
         <link href="css/main.css" rel="stylesheet"/>
+        <link href="css/index.css" rel="stylesheet"/>
 
     </head>
     <body>
@@ -32,7 +33,15 @@
         </nav>
 
         <div class="body-contnet">
- 
+            <h2> Welcome! Please Use Navigation Bar To Shop Products</h2>
+            <h3> or Check Out Today's Featured Item Below.</h3>
+                <a href="product-description.html" class="list-group-item">
+                    <div class="media-body">
+                        <h4 class="media-heading">Item heading</h4>
+                        Price: amount In Stock: no
+                        <img class="media-object" src="images/unknownItem.png" height="300" width="300" alt="Image Picture">
+                    </div>    
+                </a>
         </div>
 
         <footer class="footer">
