--- a/public_html/product-description.html
+++ b/public_html/product-description.html
@@ -9,8 +9,8 @@
         <link href="css/bootstrap.css" rel="stylesheet"/>
         <link href="css/bootstrap.min.css" rel="stylesheet"/>
         <link href="css/bootstrap-theme.min.css" rel="stylesheet"/>
-        <link href="css/main.css" rel="stylesheet"/>
         <link href="css/product-description.css" rel="stylesheet"/>
+        <link href="css/main.css" rel="stylesheet"/>
 
     </head>
     <body>
@@ -18,7 +18,7 @@
             <h1> Shopstuff Inc </h1>
 
             <ul class="nav navbar-nav">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="shopping-cart.html">Shopping Cart</a></li>
                 <li>
@@ -48,26 +48,26 @@
                 </div>
             </div>
 
-            <form class="form-inline">
-                <div class="form-group">
-                    <label class="sr-only" for="exampleInputAmount">Add X Amount To Cart</label>
-                    <div class="input-group">
-                        <div class="input-group-addon">Buy</div>
-                        <input type="number" class="form-control" id="exampleInputAmount" placeholder="Amount">
-                        <div class="input-group-addon">For: $0.00</div>
+            <div class="form">
+                <form class="form-inline">
+                    <div class="form-group">
+                        <label class="sr-only" for="exampleInputAmount">Add X Amount To Cart</label>
+                        <div class="input-group">
+                            <div class="input-group-addon">Buy</div>
+                            <input type="number" class="form-control" id="exampleInputAmount" placeholder="Amount">
+                            <div class="input-group-addon">For: $0.00</div>
+                        </div>
                     </div>
-                </div>
-                <button type="submit" class="btn btn-primary">Add To Cart</button>
-            </form>
+                    <button type="button" class="btn">Add To Cart</button>
+                </form>
+            </div>
         </div>
 
-        <div class="form">
-            <footer class="footer">
-                <div class="footer_contents">
-                    <p class="text-muted">&copy; Brandon M. Dopp 2018</p>
-                </div>
-            </footer>
-        </div>
+        <footer class="footer">
+            <div class="footer_contents">
+                <p class="text-muted">&copy; Brandon M. Dopp 2018</p>
+            </div>
+        </footer>
 
         <!-- Bootstrap core JavaScript -->
         <!-- Should Stay At Bottom and In Body Tag -->
