--- a/public_html/products.html
+++ b/public_html/products.html
@@ -30,6 +30,7 @@
         </nav>
 
         <div class="body-contnet">
+            <h2> Body Header </h2>
             <div class="media">
                 <a href="product-description.html" class="list-group-item">
                     <div class="media-left media-middle">
