Basic Shopping Cart Layout Random Css Tinkering

--- a/public_html/products.html
+++ b/public_html/products.html
@@ -30,7 +30,7 @@
         </nav>
 
         <div class="body-contnet">
-            <h2> Body Header </h2>
+            <h2> All Shopstuff Products </h2>
             <div class="media">
                 <a href="product-description.html" class="list-group-item">
                     <div class="media-left media-middle">
@@ -38,7 +38,7 @@
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading">Item heading</h4>
-                        Price: amount In Stock: no
+                        Price: amount <br> In Stock: no
                     </div>
                 </a>
             </div>
@@ -49,7 +49,7 @@
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading">Item heading</h4>
-                        Price: amount In Stock: no
+                        Price: amount <br> In Stock: no
                     </div>
                 </a>
             </div>
@@ -60,7 +60,7 @@
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading">Item heading</h4>
-                        <p>Price: amount In Stock: no</p>
+                        <p>Price: amount <br> In Stock: no</p>
                     </div>
                 </a>
             </div>
